<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/submit_githublink"
        android:layout_width="393dp"
        android:layout_height="47dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/bg_submit"
        android:hint="@string/project_on_github_link"
        android:maxLines="1"
        android:padding="@dimen/padding_2"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/grey_black"
        app:layout_constraintEnd_toEndOf="@+id/submit_email"
        app:layout_constraintStart_toStartOf="@+id/submit_email"
        app:layout_constraintTop_toBottomOf="@+id/submit_email" />

    <EditText
        android:id="@+id/submit_email"
        android:layout_width="386dp"
        android:layout_height="49dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/bg_submit"
        android:hint="@string/email_address"
        android:maxLines="1"
        android:padding="@dimen/padding_2"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/grey_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <ImageView
        android:id="@+id/image"
        android:layout_width="329dp"
        android:layout_height="86dp"
        android:layout_gravity="end"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/gads"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="9dp"
        android:contentDescription="@string/exit"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintEnd_toStartOf="@+id/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white_2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/view3">

        <EditText
            android:id="@+id/submit_firstname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding"
            android:layout_weight=".5"
            android:background="@drawable/bg_submit"
            android:hint="@string/first_name"
            android:maxLines="1"
            android:padding="@dimen/padding_2"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/grey_black" />

        <EditText
            android:id="@+id/submit_lastname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding"
            android:layout_weight=".5"
            android:background="@drawable/bg_submit"
            android:hint="@string/last_name"
            android:maxLines="1"
            android:padding="@dimen/padding_2"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/grey_black" />
    </LinearLayout>

    <TextView
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="64dp"
        android:background="@drawable/bg_submit_2"
        android:paddingLeft="@dimen/padding_m"
        android:paddingTop="@dimen/padding_2"
        android:paddingRight="@dimen/padding_m"
        android:paddingBottom="@dimen/padding_2"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_h1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/submit_githublink"
        app:layout_constraintStart_toStartOf="@+id/submit_githublink"
        app:layout_constraintTop_toBottomOf="@+id/submit_githublink" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/project_submission"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_h1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/image"
        app:layout_constraintStart_toStartOf="@+id/image"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</androidx.constraintlayout.widget.ConstraintLayout>