<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_submit_3"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/padding_m"
    android:paddingTop="@dimen/padding_m"
    >
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_cancel"
        android:layout_gravity="end"
        app:tint="@color/grey_black"
        android:layout_marginEnd="@dimen/padding_2"
        android:contentDescription="@string/cancel"
        android:id="@+id/submit_cancel"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:textColor="@color/grey_black"
        android:gravity="center"
        android:padding="@dimen/padding_2"
        android:textSize="@dimen/text_size_h1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:paddingStart="@dimen/padding_m2"
        android:paddingEnd="@dimen/padding_m2"
        android:paddingBottom="@dimen/padding_2"
        android:paddingTop="@dimen/padding_2"
        android:textSize="@dimen/text_size_h1"
        android:background="@drawable/bg_yes"
        android:id="@+id/submit_yes"
        />
</LinearLayout>